--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.8.5",
+    "@reduxjs/toolkit": "^1.8.2",
     "@rest-hooks/hooks": "^3.0.2",
     "@rest-hooks/rest": "^5.0.2",
     "@tanstack/react-table": "8.0.0-beta.9",
@@ -22,6 +23,7 @@
     "qs": "^6.10.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "rest-hooks": "^6.3.4",
     "sass": "^1.52.3",
