--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@mui/lab": "^5.0.0-alpha.87",
     "@mui/material": "^5.8.5",
+    "@mui/x-data-grid": "^5.12.2",
+    "@mui/x-data-grid-pro": "^5.12.2",
     "@reduxjs/toolkit": "^1.8.2",
-    "@rest-hooks/hooks": "^3.0.2",
-    "@rest-hooks/rest": "^5.0.2",
-    "@tanstack/react-table": "8.0.0-beta.9",
     "@types/lodash": "^4.14.182",
     "axios": "^0.27.2",
     "build-url-ts": "^6.1.3",
@@ -25,12 +25,7 @@
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
-    "rest-hooks": "^6.3.4",
-    "sass": "^1.52.3",
-    "uuid": "^8.3.2",
-    "vite-plugin-checker": "^0.4.6",
-    "vite-plugin-eslint": "^1.6.1",
-    "vite-plugin-html": "^3.2.0"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^17.0.42",
@@ -46,7 +41,11 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.6.1",
+    "sass": "^1.52.3",
     "typescript": "^4.7.3",
+    "vite-plugin-checker": "^0.4.6",
+    "vite-plugin-eslint": "^1.6.1",
+    "vite-plugin-html": "^3.2.0",
     "vite": "^2.9.12"
   }
 }
