--- a/package.json
+++ b/package.json
@@ -8,45 +8,45 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.9.3",
-    "@emotion/styled": "^11.9.3",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/lab": "^5.0.0-alpha.87",
-    "@mui/material": "^5.8.5",
-    "@mui/x-data-grid": "^5.12.2",
-    "@mui/x-data-grid-pro": "^5.12.2",
-    "@reduxjs/toolkit": "^1.8.2",
-    "@types/lodash": "^4.14.182",
-    "axios": "^0.27.2",
-    "build-url-ts": "^6.1.3",
-    "clsx": "^1.1.1",
-    "lodash": "^4.17.21",
-    "qs": "^6.10.5",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-redux": "^8.0.2",
-    "react-router-dom": "^6.3.0",
-    "uuid": "^8.3.2"
+    "@emotion/react": "11.10.5",
+    "@emotion/styled": "11.10.5",
+    "@mui/icons-material": "5.10.9",
+    "@mui/lab": "5.0.0-alpha.103",
+    "@mui/material": "5.10.11",
+    "@mui/x-data-grid": "5.17.9",
+    "@mui/x-data-grid-pro": "5.17.9",
+    "@reduxjs/toolkit": "1.8.6",
+    "@types/lodash": "4.14.186",
+    "axios": "1.1.3",
+    "build-url-ts": "6.1.3",
+    "clsx": "1.2.1",
+    "lodash": "4.17.21",
+    "qs": "6.11.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-redux": "8.0.4",
+    "react-router-dom": "6.4.2",
+    "uuid": "9.0.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.42",
-    "@types/qs": "^6.9.7",
-    "@types/react": "^18.0.12",
-    "@types/react-dom": "^18.0.5",
-    "@types/uuid": "^8.3.4",
-    "@typescript-eslint/eslint-plugin": "^5.21.0",
-    "@typescript-eslint/parser": "^5.21.0",
-    "@vitejs/plugin-react": "^1.3.2",
-    "eslint": "^8.12.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.6.1",
-    "sass": "^1.52.3",
-    "typescript": "^4.7.3",
-    "vite-plugin-checker": "^0.4.6",
-    "vite-plugin-eslint": "^1.6.1",
-    "vite-plugin-html": "^3.2.0",
-    "vite": "^2.9.12"
+    "@types/node": "18.11.7",
+    "@types/qs": "6.9.7",
+    "@types/react": "18.0.24",
+    "@types/react-dom": "18.0.8",
+    "@types/uuid": "8.3.4",
+    "@typescript-eslint/eslint-plugin": "5.41.0",
+    "@typescript-eslint/parser": "5.41.0",
+    "@vitejs/plugin-react": "2.2.0",
+    "eslint": "8.26.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "prettier": "2.7.1",
+    "sass": "1.55.0",
+    "typescript": "4.8.4",
+    "vite": "3.2.1",
+    "vite-plugin-checker": "0.5.1",
+    "vite-plugin-eslint": "1.8.1",
+    "vite-plugin-html": "3.2.0"
   }
 }
