--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "1.1.0",
   "scripts": {
-    "serve": "vite",
+    "serve": "vite --host --port 3000",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint --fix --ext .ts,.tsx ."
